small menu build

--- a/src/sass/structure/header/_metasearch.scss
+++ b/src/sass/structure/header/_metasearch.scss
@@ -99,7 +99,7 @@
 
             &.active {
                 visibility: visible;
-                padding: 0.3rem 2.5rem 0.3rem 0.8rem;
+                padding: 0.3rem 0.8rem;
 
                 @media (min-width: $screen-sm) {
                     width: 160px;
