small mainnav and new left nav done

--- a/src/sass/structure/navigation/_subnav.scss
+++ b/src/sass/structure/navigation/_subnav.scss
@@ -2,35 +2,55 @@
 /* Subnav in content
 /*-----------------------------------------------------------------------------------*/
 
+// Convert color variable to value for SVG fill
+@function color-to-svg-fill($colour) {
+    @return '%23' + str-slice('#{$colour}', 2, -1)
+}
+
 .sidebar-subnav {
+	height: 100%;
+	border-radius: var(--border-radius);
+
     header {
-	
-	margin-top: 0px;
-	@include px2rem($font-size-h2);
-	font-weight: bold;
+		margin-top: 0px;
+		@include px2rem($font-size-h3);
+		font-weight: 500;
+		background-color: var(--color-primary-ci-hell);
+		padding: 15px 20px;
+		line-height: 1.5;
 	
 		a {
 			display: block;
 			position: relative;
-			padding: 0px 22px 10px 22px;
-			color: var(--color-branding-zentral);
+			padding: 0px 22px 0px 22px;
+			
+			@media (min-width: $screen-md) {
+				color: var(--color-hero-text);
+			}
 
 			&:hover,
 			&:focus {
-				color: var(--color-branding-zentral);
+				//color: var(--color-branding-zentral);
 				transition: text-decoration 0.1s ease;
 				text-decoration: underline;
-				text-decoration-color: var(--color-primary-ci-hell);
+				text-decoration-color: var(--color-hero-text);
 				text-underline-offset: 0.4rem;
 				text-decoration-thickness: 0.15rem;
 			}
 
-			&::before {
+			@media (max-width: $screen-md) {
+				&:hover,
+				&:focus {
+					text-decoration-color: var(--color-links);
+				}
+			}
+
+			&:before {
 				display: inline-block;
 				position: absolute;
 				content: '';
-				width: 2.5rem;
-				height: 2.5rem;
+				width: 2.2rem;
+				height: 2.2rem;
 				line-height: 1.4rem;
 				font-size: 0.9333333333rem;
 				background-image: inherit;
@@ -38,10 +58,17 @@
 				background-size: 100%;
 				background-position: center center;
 				transform: rotate(180deg);
-				background-image: url('data:image/svg+xml;charset=UTF-8,%3Csvg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"%3E%3Cpath fill="%2304316A" d="M14.83,11.29,10.59,7.05a1,1,0,0,0-1.42,0,1,1,0,0,0,0,1.41L12.71,12,9.17,15.54a1,1,0,0,0,0,1.41,1,1,0,0,0,.71.29,1,1,0,0,0,.71-.29l4.24-4.24A1,1,0,0,0,14.83,11.29Z"/%3E%3C/svg%3E%0A');
-				left: -18px;
+				background-image: url('data:image/svg+xml;charset=UTF-8,%3Csvg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"%3E%3Cpath fill="#{color-to-svg-fill($color-hero-text)}" d="M14.83,11.29,10.59,7.05a1,1,0,0,0-1.42,0,1,1,0,0,0,0,1.41L12.71,12,9.17,15.54a1,1,0,0,0,0,1.41,1,1,0,0,0,.71.29,1,1,0,0,0,.71-.29l4.24-4.24A1,1,0,0,0,14.83,11.29Z"/%3E%3C/svg%3E%0A');
+				left: -13px;
 				top: -3px;
 			}
+
+			@media (max-width: $screen-md) {
+				&:before {
+					background-image: url('data:image/svg+xml;charset=UTF-8,%3Csvg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"%3E%3Cpath fill="#{color-to-svg-fill($color-links)}" d="M14.83,11.29,10.59,7.05a1,1,0,0,0-1.42,0,1,1,0,0,0,0,1.41L12.71,12,9.17,15.54a1,1,0,0,0,0,1.41,1,1,0,0,0,.71.29,1,1,0,0,0,.71-.29l4.24-4.24A1,1,0,0,0,14.83,11.29Z"/%3E%3C/svg%3E%0A');
+				}
+			}
+			
 
 			@media (max-width: $screen-md) {
 				padding: 0px 22px 0px 22px;
@@ -50,12 +77,46 @@
 
 		@media (max-width: $screen-md) {
 			background-color: var(--color-white);
-			padding: 5px 0 5px 20px;
+			padding: 5px 0px 5px 20px;
 		}
     }
 }
 #subnav {
 	@include no-list;
+
+	li.current_page_item {
+		background-color: #d3dde6;
+		position: relative;
+
+		ul {
+			background-color: var(--color-StandardHellgrau);
+		}
+
+		> a {
+			box-shadow: inset 5px 0px 0px 0px var(--color-primary-ci-hell);
+		}
+		//&:before {
+		//	content: '';
+		//	display: block;
+		//	position: absolute;
+		//	left: 0;
+		//	width: 5px;
+		//	height: 35px;
+		//	background-color: #04316a;
+		//}
+	}
+
+	> li {
+		> a {
+			padding: 8px 20px;
+		}
+
+		//&.current_page_item {
+		//	&:before {
+		//		height: 43px;
+		//	}
+		//}
+	}
 
 	ul, li {
 		@include no-list;
@@ -65,19 +126,20 @@
 		text-decoration: none;
 		display: block;
 		@include px2rem($font-size-nav-level2);
-		font-weight: bold;
+		font-weight: 500;
 
-		padding: 6px 0;
+		padding: 6px 20px 6px 0;
 		color: var(--color-submenu-currentlevel-text);
 
 		&:hover,
 		&:focus {
-			color: var(--color-submenu-currentlevel-text);
-			transition: text-decoration 0.1s ease;
-			text-decoration: underline;
-			text-decoration-color: var(--color-primary-ci-hell);
-			text-underline-offset: 0.3rem;
-			text-decoration-thickness: 0.15rem;
+			//color: var(--color-submenu-currentlevel-text);
+			//transition: text-decoration 0.1s ease;
+			//text-decoration: underline;
+			//text-decoration-color: var(--color-primary-ci-hell);
+			//text-underline-offset: 0.3rem;
+			//text-decoration-thickness: 0.15rem;
+			background-color: #d3dde6;
 		}
 
 		@media (max-width: $screen-md) {
@@ -90,17 +152,14 @@
 		display: none;
 	}
 
-	> li {
-		border-bottom: 1px solid #fff;
-	}
 
 	.current_page_item {
 		> a {
-			transition: text-decoration 0.1s ease;
-			text-decoration: underline;
-			text-decoration-color: var(--color-primary-ci-hell);
-			text-underline-offset: 0.3rem;
-			text-decoration-thickness: 0.15rem;
+			//transition: text-decoration 0.1s ease;
+			//text-decoration: underline;
+			//text-decoration-color: var(--color-primary-ci-hell);
+			//text-underline-offset: 0.3rem;
+			//text-decoration-thickness: 0.15rem;
 		}
 	}
 	.current_page_item,
@@ -118,25 +177,25 @@
 
 	li li {
 	    a {
-			padding-left: 1.2rem;
+			padding-left: 40px;
 			font-weight: unset;
 			@include px2rem($font-size-nav-level3);
 	    }
 	    li {
 			a {
-				padding-left: 2.4rem;
+				padding-left: 60px;
 			}
 			li {
 				a {
-					padding-left: 3.6rem;
+					padding-left: 80px;
 				}
 				li {
 					a {
-						padding-left: 4.8rem;
+						padding-left: 100px;
 					}
 					li {
 						a {
-							padding-left: 6rem;
+							padding-left: 120px;
 						}
 					}
 				}
@@ -210,10 +269,10 @@
 		background-image: svg-icon-draft($color-submenu-currentpage-text, 16, 16);
 	    }
 	}
-
-
-
-
+}
+ul#subnav {
+	background-color: var(--color-StandardHellgrau);
+	padding: 10px 0px;
 }
 
 
