--- a/src/sass/structure/hero/_herobase.scss
+++ b/src/sass/structure/hero/_herobase.scss
@@ -12,7 +12,7 @@
     overflow: hidden;
 
     @media (min-width: $screen-sm) {
-        margin: 0 auto;
+        margin: 0 auto 20px auto;
     }
     &.hero-banner {
 	@media (min-width: $screen-md) {
