--- a/src/sass/structure/navigation/_subnav.scss
+++ b/src/sass/structure/navigation/_subnav.scss
@@ -77,7 +77,7 @@
 
 		@media (max-width: $screen-md) {
 			background-color: var(--color-white);
-			padding: 5px 0px 5px 20px;
+			//padding: 5px 0px 5px 20px;
 		}
     }
 }
