--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /*!
 Theme Name: FAU-Einrichtungen
-Version: 2.3.34-596
+Version: 2.3.34-597
 Requires at least: 6.1
 Tested up to: 6.2
 Requires PHP: 8.0
@@ -11293,7 +11293,7 @@ main .subpages-menu a:focus svg .fallback,
 .contentmenu.meganav > ul > li > ul > li > a:hover {
   color: var(--color-mainmenu-sublevel-hover-text);
   background-color: var(--color-mainmenu-sublevel-bg);
-  border-radius: 3px;
+  border-radius: var(--border-radius);
 }
 .contentmenu.meganav > ul > li > ul > li::before {
   display: none;
