--- a/src/sass/_custom-properties.scss
+++ b/src/sass/_custom-properties.scss
@@ -109,7 +109,7 @@
     --devider-height: #{$default-devider-height};
     --width-gutter: #{$fau-gutter-width};
     --width-gutter-half: #{$fau-gutter-halfwidth};
-    
+    --base-line-height: #{$base-line-height};
 
 }
 
