--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -215,6 +215,7 @@ $screen-minrembase:	    360px;
 
 $font-size-gridbase: 16;
 $font-size-base: 16;
+$base-line-height: 1.5;
 
 
 $font-size-meta: ($font-size-base - 2);
