--- a/src/sass/structure/layout/_base.scss
+++ b/src/sass/structure/layout/_base.scss
@@ -5,9 +5,8 @@ body {
 	margin: 0;
 	color: var(--color-Text);
 	background-color: var(--color-MainBackground);
-	font-size: 16px;
 	font-size: 1rem;
-	line-height: 1.5;
+	line-height: var(--base-line-height);
 }
 
 html, body, button {
